# ccx

./: CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  release.toml
.claude-plugin/: marketplace.json
.itack/: 2026-01-26-issue-001.md  2026-01-26-issue-002.md  2026-01-26-issue-003.md  2026-01-26-issue-004.md  2026-01-26-issue-005.md  2026-01-26-issue-006.md  2026-01-26-issue-007.md  2026-01-27-issue-008.md  2026-01-27-issue-009.md  2026-01-29-issue-013.md  metadata.toml
docs/arch/: 2026-01-25-mvp.md
plugins/.claude-plugin/: plugin.json
plugins/commands/: worktree-itack.md
plugins/skills/ccx-basics/: SKILL.md
src/: main.rs  tmux.rs
